--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,6 @@
 # Change baseurl before deploy
-baseurl = "https://demo.stack.jimmycai.com"
+#https://demo.stack.jimmycai.com
+baseurl = ""
 languageCode = "en-us"
 paginate = 5
 title = "Hugo Theme Stack Starter"
