--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,6 +1,6 @@
 # Change baseurl before deploy
 #https://demo.stack.jimmycai.com
-baseurl = ""
+baseurl = "https://backgroundclouds.github.io/CCBbaby/"
 languageCode = "en-us"
 paginate = 5
 title = "Hugo Theme Stack Starter"
