--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://backgroundclouds.github.io/CCBbaby/"
+baseurl = ""
 languageCode = "en-us"
 paginate = 5
 title = "Hugo Theme Stack Starter"
@@ -15,5 +15,5 @@ hasCJKLanguage = false
 # Change it to your Disqus shortname before using
 disqusShortname = "hugo-theme-stack"
 
-
+# https://backgroundclouds.github.io/CCBbaby/
 # https://demo.stack.jimmycai.com
